--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                                 Get Started
                             </button>
                             <button
-                                class="stagger-item hover-button w-full sm:w-auto px-8 py-4 text-base sm:text-lg font-gilroy-medium rounded-lg border-2 border-[#25A4AD] text-[#25A4AD] hover:bg-[#25A4AD] hover:text-white transition-all duration-300 transform focus:outline-none focus:ring-2 focus:ring-[#25A4AD] focus:ring-opacity-50">
+                                class="stagger-item hover-button w-full sm:w-auto px-8 py-4 text-base sm:text-lg font-gilroy-medium rounded-lg border-2 border-[#25A4AD] text-[#25A4AD] hover:bg-[#1E8A91] hover:text-white transition-all duration-300 transform focus:outline-none focus:ring-2 focus:ring-[#25A4AD] focus:ring-opacity-50">
                                 Explore
                             </button>
                         </div>
