--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <button class="text-[#313131] px-4 py-2 font-gilroy-medium hover:bg-gray-100 transition-colors">Sign
                     In</button>
                 <button
-                    class="text-[#25A4AD] border-[#25A4AD] border px-4 py-2 font-gilroy-medium hover:bg-[#25A4AD] hover:text-white transition-colors">Sign
+                    class="text-[#25A4AD] border-[#25A4AD] border px-4 py-2 font-gilroy-medium hover:bg-[#1E8A91] hover:text-white transition-colors">Sign
                     Up</button>
             </div>
         </nav>
